Bug 1151711 - Back out bug 1065536 part 3 for some ipc crash. r=mccr8, a=jocheng

back out https://hg.mozilla.org/mozilla-central/rev/3cf774a0954d
We shutdown the CompositorChild ipc and then we use it during cc.